# golos

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  client.c  config.mk  miniaudio.h  nuklear.h  server.c  util.h
include/: golos.h
rust/golos/: Cargo.toml
rust/golos/src/: main.rs
src/: client.c  server.c
