[package]
name = "golos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version="4.4.6", features = ["derive"] }
cpal = "0.15.2"
ringbuf = "0.3.3"
tokio = { version = "1.32.0", features = ["full"] }
